<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_web_dev"
            android:icon="@drawable/web"
            android:title="@string/menu_salaries" />
        <item
            android:id="@+id/nav_web_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/compas"
            android:title="@string/menu_compass" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_audio_recorder"
            android:icon="@drawable/audio"
            android:title="@string/menu_audio_recorder" />
    </group>
</menu>