<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.shlykvp.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_web_dev"
        android:name="ru.mirea.shlykvp.mireaproject.DataFragment"
        android:label="Web Development"
        tools:layout="@layout/fragment_data"  />

    <fragment
        android:id="@+id/nav_web_view"
        android:name="ru.mirea.shlykvp.mireaproject.WebViewFragment"
        android:label="Начать обучение"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_compass"
        android:name="ru.mirea.shlykvp.mireaproject.CompassFragment"
        android:label="@string/menu_compass"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.shlykvp.mireaproject.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_audio_recorder"
        android:name="ru.mirea.shlykvp.mireaproject.AudioRecorderFragment"
        android:label="@string/menu_audio_recorder"
        tools:layout="@layout/fragment_audio_recorder" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.shlykvp.mireaproject.ProfileFragment"
        android:label="Профиль"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_file_operations"
        android:name="ru.mirea.shlykvp.mireaproject.FileOperationsFragment"
        android:label="Работа с файлами"
        tools:layout="@layout/fragment_file_operations" />
</navigation>